# LingNexus

./: .env.example  .gitignore  AGENT.md  AGENT_CONFIG_REVIEW.md  API_STABILITY_REPORT.md  CLAUDE.md  DEDUPLICATOR_TEST_REPORT.md  DEPLOYMENT.md  DOCKER_PERMISSION_FIX.md  Dockerfile.lingnexus  E2E_TEST_REPORT.md  INVESTIGATOR_CONCURRENCY_DESIGN.md  INVESTIGATOR_CONCURRENCY_V2_SESSIONS_SPAWN.md  INVESTIGATOR_INTEGRATION_REPORT.md  INVESTIGATOR_OPTIMIZATION_PLAN.md  INVESTIGATOR_SESSIONS_SPAWN_IMPLEMENTATION.md  INVESTIGATOR_SESSIONS_SPAWN_STATUS.md  LINGNEXUS.md  MIGRATION_GUIDE.md  README.md  REFACTOR_GUIDE.md  RESTART_BACKEND.md  SESSIONS_SPAWN_FINAL_STATUS.md  SETUP_COMPLETE.md  START_GUIDE.md  SYSTEM_STATUS.md  TEST_REPORT.md  TEST_SUMMARY.md  VALIDATOR_TEST_REPORT.md  WORKFLOW_FIX_REPORT.md  check_detail_api.py  check_input_schema.py  check_news_data.py  check_plugin_status.py  docker-compose.yml  logs  mock_raw_evidence.json  openclaw.config.json  package.json  proxy-server.js  (+16 more)
config/: __init__.py  agentscope_config.yaml  api_keys.yaml.example  model_config.yaml  projects_monitoring.yaml  service_config.yaml  settings.py
core_agents/: __init__.py
docs/: APP_BUILDER_FRONTEND_DESIGN.md  CODE_CLEANUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FILE_MANAGEMENT_DESIGN.md  FINAL_IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_CLEANUP_SUMMARY.md  README.md  SKILL_PRIORITY_IMPLEMENTATION.md  SUMMARY.md  USER_SPACE_DESIGN.md  agentscope_builtin_tools.md  agentscope_studio_guide.md  api_key_guide.md  architecture.md  claude_skills_compatibility.md  cli_bash_filtering_fix.md  (+19 more)
(+162 files in other folders)
