[project]
name = "lingnexus-workspace"
version = "0.0.0"
description = "LingNexus Monorepo Workspace"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/framework",
    "packages/platform/backend",
]

# 共享开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["packages/framework/tests", "packages/platform/backend/tests", "tests/integration"]
